--- a/main.html
+++ b/main.html
@@ -8,8 +8,42 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<button id="openModal">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h2>Modal Header</h2>
+      <button class="close-modal">&times;</button>
+    </div>
+    <div class="modal-body">
+      <p>
+Lorem ipsum dolor sit amet, conseteur adipsicing elit, Integer nec odio. Preesent libero, Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperidiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue sumper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
+    </div>
+  </div>
+</div>
+
+  
+	<script type="text/javascript" src="./script.js">
+
+        		document.getElementById('openModal').onclick = function() {
+  document.getElementById('myModal').style.display = "block";
+}
+
+// Close the modal when clicking outside of it or on the close button
+window.onclick = function(event) {
+  var modal = document.getElementById('myModal');
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+
+document.querySelector('.close-modal').onclick = function() {
+  document.getElementById('myModal').style.display = "none";
+}
 </script>
+	
 
 </body>
 
